kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-website-service
  labels:
    app: static-website
spec:
  type: LoadBalancer  # Cambio a LoadBalancer
  selector:
    app: static-website
  ports:
  - protocol: TCP
    port: 80  # Expose port 80
    targetPort: 80  # Direct traffic to the containers on port 80
